<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_task_btn"
        android:contentDescription="@string/search_task_description"
        android:icon="@drawable/ic_search_btn"
        android:title="@string/search_task_label"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_all_tasks"
        android:contentDescription="@string/clear_all_tasks"
        android:icon="@drawable/baseline_delete_sweep_24"
        android:title="@string/clear_all_tasks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/showCompleted"
        android:contentDescription="@string/showCompleted"
        android:title="@string/showCompleted"
        app:showAsAction="never" />
    <item
        android:id="@+id/getDailyNotifications"
        android:contentDescription="@string/getDailyNotifications"
        android:title="@string/getDailyNotifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/makeSomeNotificationsPersistent"
        android:contentDescription="@string/makeSomeNotificationsPersistent"
        android:title="@string/makeSomeNotificationsPersistent"
        app:showAsAction="never" />


</menu>